# Household_Electric_Power_Consumption_prediction

./: .gitignore  README.md  pyproject.toml
src/household_power_consumption/models/: gap_model_best_params.keras  global_active_power_first_model.h5  global_active_power_first_model.keras  scaler.pkl
src/household_power_consumption/notebooks/: global_active_power_LSTM.py  optimizing_LSTM.py
src/household_power_consumption/utils/: __init__.py  utils.py
