[tool.poetry]
name = "household-electric-power-consumption-prediction"
version = "0.1.0"
description = "Time Series analysis of Household Electric Power Consumption"
authors = ["Szymon-Budziak <szymonbudziak@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "household_power_consumption", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"
jupytext = "^1.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
